--- a/MacCalendar/Info.plist
+++ b/MacCalendar/Info.plist
@@ -6,5 +6,9 @@
 	<string>MacCalendar needs access to your calendars to display your events.</string>
 	<key>NSCalendarsFullAccessUsageDescription</key>
 	<string>MacCalendar needs full access to your calendars to display your events.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>tsangerjinkai02w4.ttf</string>
+	</array>
 </dict>
 </plist>
