--- a/MacCalendar/Info.plist
+++ b/MacCalendar/Info.plist
@@ -6,6 +6,10 @@
 	<string>MacCalendar needs access to your calendars to display your events.</string>
 	<key>NSCalendarsFullAccessUsageDescription</key>
 	<string>MacCalendar needs full access to your calendars to display your events.</string>
+	<key>ATSApplicationFontsPath</key>
+	<array>
+		<string>tsangerjinkai02w4.ttf</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>tsangerjinkai02w4.ttf</string>
