Fix bundled font loading with programmatic registration
- Fixed ATSApplicationFontsPath in Info.plist (should be string, not array)
- Added CTFontManagerRegisterFontsForURL in AppDelegate for proper font registration
- Font now loads correctly on machines without system-wide installation

--- a/MacCalendar/Info.plist
+++ b/MacCalendar/Info.plist
@@ -7,12 +7,6 @@
 	<key>NSCalendarsFullAccessUsageDescription</key>
 	<string>MacCalendar needs full access to your calendars to display your events.</string>
 	<key>ATSApplicationFontsPath</key>
-	<array>
-		<string>tsangerjinkai02w4.ttf</string>
-	</array>
-	<key>UIAppFonts</key>
-	<array>
-		<string>tsangerjinkai02w4.ttf</string>
-	</array>
+	<string>.</string>
 </dict>
 </plist>
