--- a/MacCalendar/Info.plist
+++ b/MacCalendar/Info.plist
@@ -6,6 +6,10 @@
 	<string>MacCalendar needs access to your calendars to display your events.</string>
 	<key>NSCalendarsFullAccessUsageDescription</key>
 	<string>MacCalendar needs full access to your calendars to display your events.</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>MacCalendar needs access to your reminders to display them alongside your events.</string>
+	<key>NSRemindersFullAccessUsageDescription</key>
+	<string>MacCalendar needs full access to your reminders to display them alongside your events.</string>
 	<key>ATSApplicationFontsPath</key>
 	<string>.</string>
 </dict>
