--- a/MacCalendar/MacCalendar.entitlements
+++ b/MacCalendar/MacCalendar.entitlements
@@ -6,5 +6,7 @@
 	<false/>
 	<key>com.apple.security.personal-information.calendars</key>
 	<true/>
+	<key>com.apple.security.personal-information.reminders</key>
+	<true/>
 </dict>
 </plist>
